fix(page layout): adding custom scrollbar

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -18,4 +18,27 @@
 
 html {
   scroll-behavior: smooth;
+  box-sizing: border-box;
+  --scrollbarBG: #F1F1F1;
+  --thumbBG: #b8b8b8;
+}
+
+html::-webkit-scrollbar {
+  width: 11px;
+}
+html {
+  scrollbar-width: thin;
+  scrollbar-color: var(--thumbBG) var(--scrollbarBG);
+}
+html::-webkit-scrollbar-track {
+  background: var(--scrollbarBG);
+}
+html::-webkit-scrollbar-thumb {
+  background-color: var(--thumbBG) ;
+  border-radius: 6px;
+  border: 3px solid var(--scrollbarBG);
+}
+
+*, ::after, ::before {
+  box-sizing: inherit;
 }
